@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-10-04T01:12:43Z",
-  "count_outdated" : 1593,
-  "uniques_outdated" : 1113,
-  "count" : 1607,
-  "uniques" : 1127,
+  "timestamp" : "2025-10-06T01:17:09Z",
+  "count_outdated" : 1596,
+  "uniques_outdated" : 1116,
+  "count" : 1608,
+  "uniques" : 1128,
   "clones" : [
-    {
-      "timestamp": "2025-09-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
-    {
-      "timestamp": "2025-09-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-24T00:00:00Z",
       "count": 1,
@@ -106,6 +88,15 @@
     },
     {
       "timestamp": "2025-10-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
