@@ -1,17 +1,7 @@
 {
-  "count": 14,
-  "uniques": 4,
+  "count": 12,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2025-09-21T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2025-09-22T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-09-24T00:00:00Z",
       "count": 1,
@@ -59,6 +49,11 @@
     },
     {
       "timestamp": "2025-10-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-05T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
